Создать структуру проекта

--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "express-mesto",
   "version": "1.0.0",
-  "description": "Проект Место: фронтенд и бэкенд ",
-  "main": "index.js",
+  "description": "Интерактивная страница для размещения фотографий",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kateworks/express-mesto.git"
   },
   "author": "Ekaterina Pozhidaeva",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
