--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": "airbnb-base",
 
   "rules": {
-    "no-underscore-dangle": 0,
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "comma-dangle": ["error", "always-multiline"],
     "comma-spacing": ["error", { "before": false, "after": true }],
     "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 0 }],
