--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
 
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-console": ["off"],
     "comma-dangle": ["error", "always-multiline"],
     "comma-spacing": ["error", { "before": false, "after": true }],
     "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 0 }],
