--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-mesto",
   "version": "1.0.0",
   "homepage": "https://github.com/kateworks/express-mesto.git",
-  "description": "Интерактивная страница для размещения фотографий",
+  "description": "Бэкенд проекта Mesto",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
