--- a/.eslintrc
+++ b/.eslintrc
@@ -4,11 +4,7 @@
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "no-console": ["off"],
-    "no-useless-escape": ["off"],
-    "comma-dangle": ["error", "always-multiline"],
-    "comma-spacing": ["error", { "before": false, "after": true }],
-    "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 0 }],
-    "semi": ["error", "always"]
+    "no-useless-escape": ["off"]
   }
 
 }
